force-app/main/default/objects/PMC_DH_Quote_Management_Status__mdt/PMC_DH_Quote_Management_Status__mdt.object-meta.xml
<CustomObject>
    <label>Quote Management Status</label>
    <pluralLabel>Quote Management Statuses</pluralLabel>
</CustomObject>