force-app/main/default/objects/PMC_DH_Quote_Management_Status__mdt/fields/PMC_DH_Progress_Indicator_Status__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Progress_Indicator_Status__c</fullName>
    <label>Progress Indicator Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>