force-app/main/default/objects/PMC_DH_Quote_Management_Status__mdt/fields/PMC_DH_StatusLabel__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_StatusLabel__c</fullName>
    <label>PMC_DH_StatusLabel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>