force-app/main/default/objects/PMC_DH_Quote_Management_Status__mdt/fields/PMC_DH_Summary_Status__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Summary_Status__c</fullName>
    <label>Summary Status</label>
    <length>48</length>
    <type>Text</type>
</CustomField>